src/test/ui/tuple/tuple-float-index.stderr
error: unexpected token: `1.1`
  --> $DIR/tuple-float-index.rs:4:17
   |
LL |     (1, (2, 3)).1.1;
   |     ------------^^^
   |     |           |
   |     |           unexpected token
   |     If I were you, I would simply try parenthesizing the first index: `((1, (2, 3)).1).1`

error: aborting due to previous error

